OPTIONS for one added to result and updated swagger
